--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link-http": "^1.5.17",
+        "graphql": "^15.3.0",
+        "graphql-tag": "^2.11.0",
         "react": "^16.13.1",
+        "react-apollo": "^3.1.5",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
